--- a/src/App.css
+++ b/src/App.css
@@ -18,11 +18,16 @@
   white-space: nowrap;
   margin: 0 auto;
   letter-spacing: .15em;
-  animation: typing 6.5s steps(70, end);
+  animation: typing 9.5s steps(40, end);
+  animation-duration: 2.5s;
   animation-iteration-count: infinite;
 }
 
 @keyframes typing {
   from { width: 0 }
   to { width: 100% }
+}
+
+.Entrance:hover {
+  animation: none;
 }
